# sysmonitor

./: .clang-format  .gitignore  CMakeLists.txt
cli/: CMakeLists.txt
cli/src/: formatter.cpp  formatter.hpp  main.cpp  params_sizes.hpp  params_t.hpp
gui/: CMakeLists.txt  resources.qrc
gui/cmake/: QtCfg.cmake
gui/src/: main.cpp  mainwindow.cpp  mainwindow.hpp  mainwindow.ui  sidebarsetup.hpp
gui/src/pages/: cpupage.cpp  cpupage.hpp  gpupage.cpp  gpupage.hpp  ospage.cpp  ospage.hpp  pagelayout.hpp  rampage.cpp  rampage.hpp
gui/styles/: pages.qss  sidebar_button.qss  window.qss
include/: converters.hpp  cpu_core_info.hpp  cpu_info.hpp  gpu_info.hpp  osd_cpu_info.hpp  osd_system_info.hpp  sys_info.hpp
lib/: CMakeLists.txt  win_types_config.hpp.in
lib/include/: converters.hpp  cpu_info.hpp  os_info.hpp  ram_stick_info.hpp
lib/src/win/: osd_system_info.cpp  win_wmi.cpp  win_wmi.hpp  win_wmi_parser.cpp  win_wmi_parser.hpp
lib/src/win/mingw/: mgw_bstr_t.cpp  mgw_bstr_t.hpp
src/win/: osd_cpu_info.cpp  osd_system_info.cpp  win_wmi.cpp  win_wmi.hpp  win_wmi_parser.cpp  win_wmi_parser.hpp
src/win/mingw/: mgw_bstr_t.hpp
test/: cli_cpu.cpp  cli_gpu.cpp
